+ renamed ldap package to ad + moved repository dependent service implementations into ad package + added new exceptions inheriting from NoSuchEntityException + added picture and pictureInitialized attribute to UserData + added tests